test/test_array.mlt
open! Base

(* Tests for interaction with [local] mode *)

(* first test that we only allow global elements *)
let local_id (local_ x) = x;;

let k = local_id 42 in
Array.create_local ~len:10 k

[%%expect
  {|
Line _, characters _-_:
Error: This value is local but is expected to be global.
|}]
;;

(* then check that the array is indeed local *)
let arr = Array.create_local ~len:10 42 in
ref arr

[%%expect
  {|
Line _, characters _-_:
Error: This value is local but is expected to be global.
|}]
;;

(* Tests for invalid arguments to [create] *)

Array.create ~len:(-1) 0

[%%expect
  {|
Exception: (Invalid_argument Array.make).
|}]

let () =
  let _ : _ array = Array.create_local ~len:(-1) 0 in
  ()
;;

[%%expect
  {|
Exception: (Invalid_argument Array.make).
|}]
;;

Array.create ~len:(-1) #0L

[%%expect
  {|
Exception: (Invalid_argument Array.make).
|}]

let () =
  let _ : _ array = Array.create_local ~len:(-1) #0L in
  ()
;;

[%%expect
  {|
Exception: (Invalid_argument Array.make).
|}]
